adds support for displaying multiple layered <divs>
changes the option `css_class` to: `positioned_element_class`

  * when the value is a string, it behaves the same as before

  * when the value is an array of strings:
    <a style="position:absolute; width:Apx; height:Bpx; left:Cpx; top:Dpx;">
      <div class="PEC[0]" style="position:absolute; width:Apx; height:Bpx;
                  left:0px; top:0px; z-index:0;"></div>
      <div class="PEC[1]" style="position:absolute; width:Apx; height:Bpx;
                  left:0px; top:0px; z-index:1;"></div>
      ...
      <div class="PEC[N]" style="position:absolute; width:Apx; height:Bpx;
                  left:0px; top:0px; z-index:N;"></div>
    </a>

  * when the value is an array of strings:
    if the <area> element corresponding to the <a> element being constructed
    contains an attribute that matches one of these strings
    (prefixed with: "x-"), then the value of the attribute
    is added to the corresponding <div> element as html content.

example:
  * option value:
      "positioned_element_class" = ["background-overlay","caption-text"]
  * html:
      <area shape="rect" coords="0,0,100,100" href="#example"
         class="onhover odd not-even"
         x-caption-text="<span>hello world</span>" />

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 body .demo,
 body .demo img,
-body .demo a.hoverable {
+body .demo a {
 	border:				none;
 	outline:			none;
 	text-decoration:	none;
@@ -24,6 +24,12 @@ body .demo {
 body .demo img {
 	display:			inline;
 	height:				588px;
+}
+body .demo a > div {
+	visibility:			hidden;
+}
+body .demo a:hover > div {
+	visibility:			visible;
 }
 
 /* ----- divider -------------------------------- */
@@ -53,6 +59,31 @@ body .demo#demo_02 a.hoverable.odd:hover {
 }
 body .demo#demo_02 a.hoverable.even:hover {
 	background-color:	#000000;
+}
+
+/* ---- demo #03 -------------------------------- */
+body .demo#demo_03 {}
+body .demo#demo_03 a:hover > div.overlay {
+	opacity:			0.4;
+}
+body .demo#demo_03 a.odd:hover > div.overlay {
+	background-color:	#ffffff;
+}
+body .demo#demo_03 a.even:hover > div.overlay {
+	background-color:	#000000;
+}
+body .demo#demo_03 a:hover > div.caption {
+	font-family:		sans-serif;
+	font-size:			16px;
+	font-weight:		bold;
+	text-align:			center;
+	vertical-align:		middle;
+}
+body .demo#demo_03 a.odd:hover > div.caption {
+	color:				#333333;
+}
+body .demo#demo_03 a.even:hover > div.caption {
+	color:				#cccccc;
 }
 
 /* ---------------------------------------------- */
